welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: ')' expected but '<-' found.
	while (i <- 1 to n-1) {	
                 ^arrayFront9:9: error: illegal start of simple expression
}
^