welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	val n = nums.length
	while (i <- 1 to n-1) {	
		if (nums(i)==9) {
			return true;
		}
	}
	return false;
}
	

